--- a/rdro.html
+++ b/rdro.html
@@ -14,7 +14,7 @@
   <meta name="author" content="Leonel Esguerra" />
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <head> </head>
+  </head>
   <body>
     <div class="header">
       <li class="logo">
@@ -55,49 +55,56 @@
       </li>
     </div>
 
-    <div class="header-case slide">
-      <p>Overview</p>
-      <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
-      <h6>
-        Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
-        system application that the delivery riders can find an efficient route
-        from nearest up to the next nearest location and the logistics company
-        administrator can track and monitor the location of the delivery during
-        working hours.
-      </h6>
-    </div>
+    <header class="container">
+      <div class="header-case slide">
+        <p>Overview</p>
+        <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
+        <h6>
+          Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
+          system application that the delivery riders can find an efficient
+          route from nearest up to the next nearest location and the logistics
+          company administrator can track and monitor the location of the
+          delivery during working hours.
+        </h6>
+      </div>
+    </header>
 
     <center>
-      <div class="header-full slide">
+      <div class="header-full slide js-scroll fade-in-bottom">
         <img src="images/rdro-blue.png" alt="" class="zoom" />
       </div>
-      <div class="header-full slide">
+      <div class="header-full slide js-scroll fade-in-bottom">
         <img src="images/rdro-red.png" alt="" class="zoom" />
       </div>
     </center>
+    
+    <section class="scroll-container">
+        <img src="images/color-rdro-riders.png" alt="" class="scroll-element js-scroll slide-left"/>
+        <h1 class="scroll-caption">Color Exploration (Riders)<br><br>
+            <span>The prime color of the delivery rider's application is Light Blue. It acts for peace and travel. It is good in the eye of the riders because of this light color. It is compatible with daily work as delivery riders.</span>
+        </h1>
+    </section>
 
-    <div>
-      <center>
-        <div class="img1 slide">
-          <li>
-            <img src="images/color-rdro-riders.png" alt="" class="zoom" />
-            <h1>Color Exploration (Riders)</h1>
-          </li>
-          <li>
-            <img src="images/color-rdro-admin.png" alt="" class="zoom" />
-            <h1>Color Exploration (Admin)</h1>
-          </li>
-          <li>
-            <img src="images/open-sans.png" alt="" class="zoom" />
-            <h1>Typography</h1>
-          </li>
-          <li>
-            <img src="images/rdro-logo.png" alt="" class="zoom" />
-            <h1>Logo</h1>
-          </li>
-        </div>
-      </center>
-    </div>
+    <section class="scroll-container">
+        <img src="images/color-rdro-admin.png" alt="" class="scroll-element js-scroll slide-right"/>
+        <h1 class="scroll-caption">Color Exploration (Admin)<br><br>
+            <span>The prime color of the admin application is Red. It represents energy and gentleness. The respondents of the study are J&T Express. The color branding of their company is red. So I decided to copy the color red and make some customizations.</span>
+        </h1>
+    </section>
+
+    <section class="scroll-container">
+        <img src="images/open-sans.png" alt="" class="scroll-element js-scroll slide-left"/>
+        <h1 class="scroll-caption">Typography<br><br>
+            <span>Open Sans is an open-source humanist sans-serif typeface. It is typically used in Android Applications. So I decided to use this font because it is popular and typically used in Android Applications.</span>
+        </h1>
+    </section>
+
+    <section class="scroll-container">
+        <img src="images/rdro-logo.png" alt="" class="scroll-element js-scroll slide-right"/>
+        <h1 class="scroll-caption">Logo<br><br>
+            <span>There are two proposed logos which are the riders and the admin logo. The logo looks like a location icon with an eagle inside. Because eagle represents peace and freedom. The application wants the riders safety and valuable like an eagle that now is an endangered species that need to save and protect.</span>
+        </h1>
+    </section>
 
     <center>
       <div class="case-button slide">
@@ -106,7 +113,7 @@
             href="https://www.figma.com/community/file/1069145923032887684"
             target="_blank"
             style="text-decoration: none"
-            ><button class="btn-grad">Show In Figma</button></a
+            ><button class="btn-grad">View In Figma</button></a
           >
         </li>
         <li>
@@ -114,7 +121,7 @@
             href="https://play.google.com/store/apps/details?id=com.cs4.CS4_FINAL"
             target="_blank"
             style="text-decoration: none"
-            ><button class="btn-grad">Show In App</button></a
+            ><button class="btn-grad">View In App</button></a
           >
         </li>
         <li>
@@ -135,7 +142,7 @@
         </li>
       </div>
     </center>
-
+    
     <div class="footer slide">
       <center>
         <h2>Let's Connect</h2>
@@ -169,5 +176,6 @@
         </p>
       </center>
     </div>
+    <script src="scroll.js"></script>
   </body>
 </html>
