--- a/rdro.html
+++ b/rdro.html
@@ -55,19 +55,16 @@
       </li>
     </div>
 
-    <header class="container">
-      <div class="header-case slide">
-        <p>Overview</p>
-        <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
-        <h6>
-          Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
+    <div class="header-case slide">
+      <p>Overview</p>
+      <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
+      <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
           system application that the delivery riders can find an efficient
           route from nearest up to the next nearest location and the logistics
           company administrator can track and monitor the location of the
           delivery during working hours.
-        </h6>
-      </div>
-    </header>
+      </h6>
+    </div>
 
     <center>
       <div class="header-full slide js-scroll fade-in-bottom">
