--- a/dmis.html
+++ b/dmis.html
@@ -74,21 +74,21 @@
     
     <section class="scroll-container">
         <img src="images/color-dmis.png" alt="" class="scroll-element js-scroll slide-left"/>
-        <h1 class="scroll-caption">Color Exploration<br><br>
+        <h1 class="scroll-caption scroll-element js-scroll fade-in">Color Exploration<br><br>
             <span>The prime color of the system is dark and white. It is helpful for the admin if they are not comfortable in the very light system. The system has a gray color that balanced the visual of the system.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
         <img src="images/nunito.png" alt="" class="scroll-element js-scroll slide-right"/>
-        <h1 class="scroll-caption">Typography<br><br>
+        <h1 class="scroll-caption scroll-element js-scroll fade-in">Typography<br><br>
             <span>Nunito is a well-balanced sans serif typeface superfamily. It is a default Jetstream font which is one of the plugins for Laravel Frameworks and it is usually used in the web system.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
         <img src="images/dmis-logo.png" alt="" class="scroll-element js-scroll slide-left"/>
-        <h1 class="scroll-caption">Logo<br><br>
+        <h1 class="scroll-caption scroll-element js-scroll fade-in">Logo<br><br>
             <span>This is the original Logo of DOST-FPRDI. The logo combination is from DOST and FPRDI when the time FPRDI was under by DOST.</span>
         </h1>
     </section>
@@ -131,37 +131,47 @@
     </center>
     
     <div class="footer slide">
-      <center>
-        <h2>Let's Connect</h2>
-        <div class="img3">
-          <li>
-            <a href="https://www.facebook.com/nhelez04" target="_blank">
-              <img src="images/fb.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
-              <img src="images/instagram.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
-              <img src="images/gmail.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
-              target="_blank"
-            >
-              <img src="images/linkedin.png" alt="" />
-            </a>
-          </li>
-        </div>
-        <p style="font-size: 12px">
-          Copyright © 2022 Leonel Esguerra. All right reserved.
-        </p>
-      </center>
+        <center>
+          <h2>Let's Connect</h2>
+          <div class="img3">
+            <li>
+              <a href="https://www.facebook.com/nhelez04" target="_blank">
+                <img src="images/fb.png" alt="" class="slideanim" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/nhel_ez/" target="_blank">
+                <img src="images/instagram.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+                <img src="images/gmail.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
+                target="_blank"
+              >
+                <img src="images/linkedin.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/leonelesguerra" target="_blank">
+                <img src="images/behance.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/nhel-ez" target="_blank">
+                <img src="images/github-white.png" alt="" />
+              </a>
+            </li>
+          </div>
+          <p style="font-size: 12px">
+            Copyright © 2022 Leonel Esguerra. All right reserved.
+          </p>
+        </center>
     </div>
     <script src="scroll.js"></script>
   </body>
