--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div>
       <center>
-        <div class="img1 slide">
+        <div class="img1 js-scroll fade-in-bottom">
           <li>
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
               <img src="images/jemshop.png" alt="" class="zoom" />
@@ -153,6 +153,16 @@
                 <img src="images/linkedin.png" alt="" />
               </a>
             </li>
+            <li>
+              <a href="https://www.behance.net/leonelesguerra" target="_blank">
+                <img src="images/behance.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/nhel-ez" target="_blank">
+                <img src="images/github-white.png" alt="" />
+              </a>
+            </li>
           </div>
           <p style="font-size: 12px">
             Copyright © 2022 Leonel Esguerra. All right reserved.
@@ -160,5 +170,6 @@
         </center>
       </div>
     </div>
+    <script src="scroll.js"></script>
   </body>
 </html>
