--- a/about.html
+++ b/about.html
@@ -57,31 +57,42 @@
 
     <div class="header-nav-content slide">
       <p>About me</p>
-      <h1>Frontend Web Developer and Designer</h1>
+      <h1>Frontend Web Developer and UI/UX Designer</h1>
     </div>
 
     <div class="intro slide">
       <p>Hi I am</p>
       <h1 style="font-weight: 700">Leonel Esguerra</h1>
-      <p>
-        I currently live here in Laguna, Philippines. I studied Bachelor of
-        Science in Computer Science. For the past four years of studying
-        Computer Science, I was interested in the field of designing and
-        developing websites and system. I love to see designs and I love to
-        convert my ideas into reality. I want pursue my career in designs and
-        development of websites and system and practice my skill in the
-        industry.<br /><br />
-        In my early experience as an On-The-Job Trainee when I am Senior High
-        School and College and also working as a production operator in a
-        company, I was involved in communicating with different people,
-        answering calls, accomplishing tasks, working with the team, and work
-        independently. In my experience as an On-The-Job Trainee at DOST-FPRDI,
-        I was assigned a role as a Frontend Developer. I am responsible for
-        designing and developing the user interface (UI) of the system and
-        preparing technical documentation. Being an OJT, I was also responsible
-        to assist other employees in terms of technical aspects, attending
-        seminars, answering calls and preparing weekly accomplishment reports.
-      </p>
+
+      <section class="scroll-container">
+        <img
+          src="images/profile-pic.png"
+          alt=""
+          class="scroll-element js-scroll slide-left"
+        />
+        <span class="scroll-caption scroll-element js-scroll fade-in">
+          <br /><br />
+          I currently live here in Laguna, Philippines. I studied Bachelor of
+          Science in Computer Science. For the past four years of studying
+          Computer Science, I was interested in the field of designing and
+          developing websites and system. I love to see designs and I love to
+          convert my ideas into reality. I want pursue my career in designs and
+          development of websites and system and practice my skill in the
+          industry.<br /><br />
+          In my early experience as an On-The-Job Trainee when I am Senior High
+          School and College and also working as a production operator in a
+          company, I was involved in communicating with different people,
+          answering calls, accomplishing tasks, working with the team, and work
+          independently. In my experience as an On-The-Job Trainee at
+          DOST-FPRDI, I was assigned a role as a Frontend Developer. I am
+          responsible for designing and developing the user interface (UI) of
+          the system and preparing technical documentation. Being an OJT, I was
+          also responsible to assist other employees in terms of technical
+          aspects, attending seminars, answering calls and preparing weekly
+          accomplishment reports.
+        </span>
+      </section>
+
       <p style="font-weight: 700">FAVORITE TOOLS</p>
       <div class="img2">
         <li><img src="images/figma.png" alt="" /></li>
@@ -111,7 +122,7 @@
           <div class="img3">
             <li>
               <a href="https://www.facebook.com/nhelez04" target="_blank">
-                <img src="images/fb.png" alt="" />
+                <img src="images/fb.png" alt="" class="slideanim" />
               </a>
             </li>
             <li>
@@ -132,6 +143,16 @@
                 <img src="images/linkedin.png" alt="" />
               </a>
             </li>
+            <li>
+              <a href="https://www.behance.net/leonelesguerra" target="_blank">
+                <img src="images/behance.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/nhel-ez" target="_blank">
+                <img src="images/github-white.png" alt="" />
+              </a>
+            </li>
           </div>
           <p style="font-size: 12px">
             Copyright © 2022 Leonel Esguerra. All right reserved.
@@ -139,5 +160,6 @@
         </center>
       </div>
     </div>
+    <script src="scroll.js"></script>
   </body>
 </html>
