--- a/case-study.html
+++ b/case-study.html
@@ -83,7 +83,7 @@
         <div class="img3">
           <li>
             <a href="https://www.facebook.com/nhelez04" target="_blank">
-              <img src="images/fb.png" alt="" />
+              <img src="images/fb.png" alt="" class="slideanim" />
             </a>
           </li>
           <li>
@@ -102,6 +102,16 @@
               target="_blank"
             >
               <img src="images/linkedin.png" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/leonelesguerra" target="_blank">
+              <img src="images/behance.png" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/nhel-ez" target="_blank">
+              <img src="images/github-white.png" alt="" />
             </a>
           </li>
         </div>
