--- a/rdro.html
+++ b/rdro.html
@@ -141,37 +141,47 @@
     </center>
     
     <div class="footer slide">
-      <center>
-        <h2>Let's Connect</h2>
-        <div class="img3">
-          <li>
-            <a href="https://www.facebook.com/nhelez04" target="_blank">
-              <img src="images/fb.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
-              <img src="images/instagram.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
-              <img src="images/gmail.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
-              target="_blank"
-            >
-              <img src="images/linkedin.png" alt="" />
-            </a>
-          </li>
-        </div>
-        <p style="font-size: 12px">
-          Copyright © 2022 Leonel Esguerra. All right reserved.
-        </p>
-      </center>
+        <center>
+          <h2>Let's Connect</h2>
+          <div class="img3">
+            <li>
+              <a href="https://www.facebook.com/nhelez04" target="_blank">
+                <img src="images/fb.png" alt="" class="slideanim" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/nhel_ez/" target="_blank">
+                <img src="images/instagram.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+                <img src="images/gmail.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/leonel-esguerra-3a0801211"
+                target="_blank"
+              >
+                <img src="images/linkedin.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/leonelesguerra" target="_blank">
+                <img src="images/behance.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/nhel-ez" target="_blank">
+                <img src="images/github-white.png" alt="" />
+              </a>
+            </li>
+          </div>
+          <p style="font-size: 12px">
+            Copyright © 2022 Leonel Esguerra. All right reserved.
+          </p>
+        </center>
     </div>
     <script src="scroll.js"></script>
   </body>
