--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
       <center>
         <div class="img1 js-scroll fade-in-bottom">
           <li>
+            <a
+              href="https://www.figma.com/community/file/1131172600454512315"
+              target="_blank"
+            >
+              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li>
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
               <img src="images/jemshop.png" alt="" class="zoom" />
             </a>
@@ -72,11 +80,6 @@
           <li>
             <a href="http://nhelez.me/" target="_blank">
               <img src="images/advance-website.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li>
-            <a href="dmis.html">
-              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
           <a href="show-case.html" style="text-decoration: none">
@@ -132,7 +135,7 @@
           <div class="img3">
             <li>
               <a href="https://www.facebook.com/nhelez04" target="_blank">
-                <img src="images/fb.png" alt="" class="slideanim" />
+                <img src="images/fb.png" alt="" />
               </a>
             </li>
             <li>
