--- a/show-case.html
+++ b/show-case.html
@@ -64,6 +64,14 @@
       <center>
         <div class="img1 slide">
           <li>
+            <a
+              href="https://www.figma.com/community/file/1131172600454512315"
+              target="_blank"
+            >
+              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li>
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
               <img src="images/jemshop.png" alt="" class="zoom" />
             </a>
