--- a/case-study.html
+++ b/case-study.html
@@ -65,12 +65,20 @@
         <div class="img1 slide">
           <li>
             <a href="dmis.html">
-              <img src="images/dmis.png" alt="" class="zoom" />
+              <img
+                src="images/dmis.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="rdro.html">
-              <img src="images/rdro-riders.png" alt="" class="zoom" />
+              <img
+                src="images/rdro-riders.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
         </div>
@@ -83,7 +91,7 @@
         <div class="img3">
           <li>
             <a href="https://www.facebook.com/nhelez04" target="_blank">
-              <img src="images/fb.png" alt="" class="slideanim" />
+              <img src="images/fb.png" alt="" />
             </a>
           </li>
           <li>
@@ -120,5 +128,6 @@
         </p>
       </center>
     </div>
+    <script src="scroll.js"></script>
   </body>
 </html>
