--- a/dmis.html
+++ b/dmis.html
@@ -73,21 +73,21 @@
     </center>
     
     <section class="scroll-container">
-        <img src="images/color-dmis.png" alt="" class="scroll-element js-scroll slide-left"/>
+        <img src="images/color-dmis.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Color Exploration<br><br>
             <span>The prime color of the system is dark and white. It is helpful for the admin if they are not comfortable in the very light system. The system has a gray color that balanced the visual of the system.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/nunito.png" alt="" class="scroll-element js-scroll slide-right"/>
+        <img src="images/nunito.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Typography<br><br>
             <span>Nunito is a well-balanced sans serif typeface superfamily. It is a default Jetstream font which is one of the plugins for Laravel Frameworks and it is usually used in the web system.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/dmis-logo.png" alt="" class="scroll-element js-scroll slide-left"/>
+        <img src="images/dmis-logo.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Logo<br><br>
             <span>This is the original Logo of DOST-FPRDI. The logo combination is from DOST and FPRDI when the time FPRDI was under by DOST.</span>
         </h1>
