--- a/rdro.html
+++ b/rdro.html
@@ -76,28 +76,28 @@
     </center>
     
     <section class="scroll-container">
-        <img src="images/color-rdro-riders.png" alt="" class="scroll-element js-scroll slide-left"/>
+        <img src="images/color-rdro-riders.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Color Exploration (Riders)<br><br>
             <span>The prime color of the delivery rider's application is Light Blue. It acts for peace and travel. It is good in the eye of the riders because of this light color. It is compatible with daily work as delivery riders.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/color-rdro-admin.png" alt="" class="scroll-element js-scroll slide-right"/>
+        <img src="images/color-rdro-admin.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Color Exploration (Admin)<br><br>
             <span>The prime color of the admin application is Red. It represents energy and gentleness. The respondents of the study are J&T Express. The color branding of their company is red. So I decided to copy the color red and make some customizations.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/open-sans.png" alt="" class="scroll-element js-scroll slide-left"/>
+        <img src="images/open-sans.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Typography<br><br>
             <span>Open Sans is an open-source humanist sans-serif typeface. It is typically used in Android Applications. So I decided to use this font because it is popular and typically used in Android Applications.</span>
         </h1>
     </section>
 
     <section class="scroll-container">
-        <img src="images/rdro-logo.png" alt="" class="scroll-element js-scroll slide-right"/>
+        <img src="images/rdro-logo.png" alt="" class="scroll-element js-scroll fade-in-bottom"/>
         <h1 class="scroll-caption js-scroll fade-in">Logo<br><br>
             <span>There are two proposed logos which are the riders and the admin logo. The logo looks like a location icon with an eagle inside. Because eagle represents peace and freedom. The application wants the riders safety and valuable like an eagle that now is an endangered species that need to save and protect.</span>
         </h1>
