--- a/show-case.html
+++ b/show-case.html
@@ -68,32 +68,56 @@
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
             >
-              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
+              <img
+                src="images/tiktok-mockup.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
-              <img src="images/jemshop.png" alt="" class="zoom" />
+              <img
+                src="images/jemshop.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="http://nhelez.me/" target="_blank">
-              <img src="images/advance-website.png" alt="" class="zoom" />
+              <img
+                src="images/advance-website.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="dmis.html">
-              <img src="images/dmis.png" alt="" class="zoom" />
+              <img
+                src="images/dmis.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="rdro.html">
-              <img src="images/rdro-riders.png" alt="" class="zoom" />
+              <img
+                src="images/rdro-riders.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="rdro.html">
-              <img src="images/rdro-admin.png" alt="" class="zoom" />
+              <img
+                src="images/rdro-admin.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
@@ -101,7 +125,11 @@
               href="https://www.figma.com/community/file/1069146567302323589"
               target="_blank"
             >
-              <img src="images/violet-website.png" alt="" class="zoom" />
+              <img
+                src="images/violet-website.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
@@ -109,7 +137,11 @@
               href="https://www.figma.com/community/file/1070261686949293814"
               target="_blank"
             >
-              <img src="images/calculator.png" alt="" class="zoom" />
+              <img
+                src="images/calculator.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
@@ -117,7 +149,11 @@
               href="https://www.figma.com/community/file/1071003083430970406"
               target="_blank"
             >
-              <img src="images/neon-music-player.png" alt="" class="zoom" />
+              <img
+                src="images/neon-music-player.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
@@ -125,12 +161,20 @@
               href="https://nhelez.me/The-Chilay-s-Pizza/index.html"
               target="_blank"
             >
-              <img src="images/the-chilays-pizza.png" alt="" class="zoom" />
+              <img
+                src="images/the-chilays-pizza.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="https://nhelez.me/TheLeoCars/index.html" target="_blank">
-              <img src="images/the-leo-cars.png" alt="" class="zoom" />
+              <img
+                src="images/the-leo-cars.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
         </div>
@@ -143,7 +187,7 @@
         <div class="img3">
           <li>
             <a href="https://www.facebook.com/nhelez04" target="_blank">
-              <img src="images/fb.png" alt="" class="slideanim" />
+              <img src="images/fb.png" alt="" />
             </a>
           </li>
           <li>
@@ -180,5 +224,6 @@
         </p>
       </center>
     </div>
+    <script src="scroll.js"></script>
   </body>
 </html>
