--- a/index.html
+++ b/index.html
@@ -63,23 +63,35 @@
 
     <div>
       <center>
-        <div class="img1 js-scroll fade-in-bottom">
+        <div class="img1">
           <li>
             <a
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
             >
-              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
+              <img
+                src="images/tiktok-mockup.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
-              <img src="images/jemshop.png" alt="" class="zoom" />
+              <img
+                src="images/jemshop.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <li>
             <a href="http://nhelez.me/" target="_blank">
-              <img src="images/advance-website.png" alt="" class="zoom" />
+              <img
+                src="images/advance-website.png"
+                alt=""
+                class="zoom js-scroll fade-in-bottom"
+              />
             </a>
           </li>
           <a href="show-case.html" style="text-decoration: none">
@@ -99,7 +111,8 @@
         developing websites and system. I love to see designs and I love to
         convert my ideas into reality. I want pursue my career in designs and
         development of websites and system and practice my skill in the
-        industry. <a href="about.html" style="color: red">See more</a>
+        industry.
+        <a href="about.html" style="color: indianred">See more</a>
       </p>
       <p style="font-weight: 700">What is UI/UX Designs?</p>
       <p>
