--- a/case-study.html
+++ b/case-study.html
@@ -63,22 +63,14 @@
     <div>
       <center>
         <div class="img1 slide">
-          <li>
+          <li class="slide js-scroll fade-in-bottom">
             <a href="dmis.html">
-              <img
-                src="images/dmis.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="slide js-scroll fade-in-bottom">
             <a href="rdro.html">
-              <img
-                src="images/rdro-riders.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/rdro-riders.png" alt="" class="zoom" />
             </a>
           </li>
         </div>
