--- a/index.html
+++ b/index.html
@@ -58,53 +58,45 @@
     <div class="header slide">
       <p>Are you finding a modern designs for your business?</p>
       <h1>Let's convert ideas into reality!</h1>
-      <p>Here's my recent projects:</p>
+      <p class="js-scroll fade-in">Here's my recent projects:</p>
     </div>
 
     <div>
       <center>
         <div class="img1">
-          <li>
+          <li class="slide js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
             >
-              <img
-                src="images/tiktok-mockup.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="slide js-scroll fade-in-bottom">
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
-              <img
-                src="images/jemshop.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/jemshop.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="slide js-scroll fade-in-bottom">
             <a href="http://nhelez.me/" target="_blank">
-              <img
-                src="images/advance-website.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/advance-website.png" alt="" class="zoom" />
             </a>
           </li>
-          <a href="show-case.html" style="text-decoration: none">
-            <button class="btn-grad">View All</button>
-          </a>
+          <div class="slide js-scroll fade-in">
+            <a href="show-case.html" style="text-decoration: none">
+              <button class="btn-grad">View All</button>
+            </a>
+          </div>
         </div>
       </center>
     </div>
 
     <div class="intro slide">
-      <p>Hi I am</p>
-      <h1 style="font-weight: 700">Leonel Esguerra</h1>
-      <p>
+      <p class="js-scroll fade-in">Hi I am</p>
+      <h1 class="js-scroll fade-in" style="font-weight: 700">
+        Leonel Esguerra
+      </h1>
+      <p class="js-scroll fade-in">
         I currently live here in Laguna, Philippines. I studied Bachelor of
         Science in Computer Science. For the past four years of studying
         Computer Science, I was interested in the field of designing and
@@ -114,8 +106,10 @@
         industry.
         <a href="about.html" style="color: indianred">See more</a>
       </p>
-      <p style="font-weight: 700">What is UI/UX Designs?</p>
-      <p>
+      <p class="js-scroll fade-in" style="font-weight: 700">
+        What is UI/UX Designs?
+      </p>
+      <p class="js-scroll fade-in">
         The user interface is the graphical layout of an application. It
         consists of the buttons users click on, the text they read, the images,
         sliders, text entry fields, and all the rest of the items the user
@@ -123,7 +117,7 @@
         animations and every single micro-interaction. Any sort of visual
         element, interaction, or animation must all be designed.
       </p>
-      <p>
+      <p class="js-scroll fade-in">
         A user's experience of the app is determined by how they interact with
         it. Is the experience smooth and intuitive or clunky and confusing? Does
         navigating the app feel logical or does it feel arbitrary? Does
@@ -133,8 +127,10 @@
         to interact with the user interface elements that the UI designers have
         created.
       </p>
-      <p style="font-weight: 700">What is Web Development?</p>
-      <p>
+      <p class="js-scroll fade-in" style="font-weight: 700">
+        What is Web Development?
+      </p>
+      <p class="js-scroll fade-in">
         Web development refers in general to the tasks associated with
         developing websites for hosting via intranet or internet. The web
         development process includes web design, web content development,
