--- a/show-case.html
+++ b/show-case.html
@@ -63,118 +63,74 @@
     <div>
       <center>
         <div class="img1 slide">
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
             >
-              <img
-                src="images/tiktok-mockup.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
-              <img
-                src="images/jemshop.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/jemshop.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a href="http://nhelez.me/" target="_blank">
-              <img
-                src="images/advance-website.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/advance-website.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a href="dmis.html">
-              <img
-                src="images/dmis.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
-              <img
-                src="images/rdro-riders.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/rdro-riders.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
-              <img
-                src="images/rdro-admin.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/rdro-admin.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1069146567302323589"
               target="_blank"
             >
-              <img
-                src="images/violet-website.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/violet-website.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1070261686949293814"
               target="_blank"
             >
-              <img
-                src="images/calculator.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/calculator.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1071003083430970406"
               target="_blank"
             >
-              <img
-                src="images/neon-music-player.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/neon-music-player.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://nhelez.me/The-Chilay-s-Pizza/index.html"
               target="_blank"
             >
-              <img
-                src="images/the-chilays-pizza.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/the-chilays-pizza.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
+          <li class="js-scroll fade-in-bottom">
             <a href="https://nhelez.me/TheLeoCars/index.html" target="_blank">
-              <img
-                src="images/the-leo-cars.png"
-                alt=""
-                class="zoom js-scroll fade-in-bottom"
-              />
+              <img src="images/the-leo-cars.png" alt="" class="zoom" />
             </a>
           </li>
         </div>
