--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
         </span>
       </section>
 
-      <p style="font-weight: 700">FAVORITE TOOLS</p>
-      <div class="img2">
+      <p class="js-scroll fade-in" style="font-weight: 700">FAVORITE TOOLS</p>
+      <div class="img2 js-scroll fade-in">
         <li><img src="images/figma.png" alt="" /></li>
         <li><img src="images/canva.png" alt="" /></li>
         <li><img src="images/vscode.png" alt="" /></li>
@@ -102,10 +102,10 @@
         <li><img src="images/xampp.png" alt="" /></li>
         <li><img src="images/phpmyadmin.png" alt="" /></li>
       </div>
-      <p style="font-weight: 700">
+      <p class="js-scroll fade-in" style="font-weight: 700">
         FAVORITE WEB DEVELOPMENT LANGUAGES, FRAMEWORKS AND DATABASES
       </p>
-      <div class="img2">
+      <div class="img2 js-scroll fade-in">
         <li><img src="images/html.png" alt="" /></li>
         <li><img src="images/css.png" alt="" /></li>
         <li><img src="images/javascript.png" alt="" /></li>
