--- a/dmis.html
+++ b/dmis.html
@@ -94,7 +94,7 @@
     </section>
 
     <center>
-      <div class="case-button slide">
+      <div class="case-button slide js-scroll fade-in">
         <li>
           <a
             href="https://www.figma.com/community/file/1114921249053475523"
