--- a/rdro.html
+++ b/rdro.html
@@ -104,7 +104,7 @@
     </section>
 
     <center>
-      <div class="case-button slide">
+      <div class="case-button slide js-scroll fade-in">
         <li>
           <a
             href="https://www.figma.com/community/file/1069145923032887684"
